--- a/index1.html
+++ b/index1.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="game.js"></script>
   <title>Document</title>
 
 </head>
 <body>
   <div class = frontA class = backA></div>
-  <div class = fontB class = frontB ></div>
-  
+  <div class = frontB class = backB ></div>
+  <button onclick = "startGame()"> Start Game </button>
 </body>
 </html>
