updated CSS slightly

--- a/index1.html
+++ b/index1.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-  <div class = frontA class = backA></div>
-  <div class = frontB class = backB ></div>
-  <button onclick = "startGame()"> Start Game </button>
+  <div class = frontA class = backA onclick = ></div>
+  <div class = frontB class = backB onclick = ></div>
+  <button onclick = "start()"> Start Game </button>
 </body>
 </html>
