added flip function onto both cards

--- a/index1.html
+++ b/index1.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
   <script defer src="game.js"></script>
-  <title>Document</title>
-
+  <title>The World Of Pairs</title>
 </head>
 <body>
-  <div class = frontA class = backA onclick = ></div>
-  <div class = frontB class = backB onclick = ></div>
-  <button onclick = "start()"> Start Game </button>
+  <div class = container>
+    <div class="card" id="card">
+      <div class="front" id="front"></div>
+      <div class="back" id="back"></div>
+    </div>
+    <div class="card2" id="card2">
+      <div class="front2" id="front2"></div>
+      <div class="back2" id="back2"></div>
+    </div>
+  <button onclick ="start" id="startGame"> Start Game </button>
 </body>
 </html>
