--- a/index1.html
+++ b/index1.html
@@ -9,17 +9,15 @@
   <title>The World Of Pairs</title>
 </head>
 <body>
-  <img src="">
   <div class = container>
-    <div onclick="flipCard()" class="card" id="card">1
-      <div class="card" id="back">
-      </div>
-    </div>
-    <div onclick="flipCard()" class="card2" id="card2">2
+    <div onclick="flipCard()" class="card" id="card">1</div>
+      <div class="card" id="back"></div>
+    <div onclick="flipCard2()" class="card2" id="card2">2
       <div class="card2" id="back2">
         <img src="" alt="" id="img4">
+      <div
       </div>
   </div>
-  <button  id="startGame"> Start Game </button>
+  <button onclick="start()" id="startGame"> Start Game </button>
 </body>
 </html>
