got 1 card to flip

--- a/index1.html
+++ b/index1.html
@@ -11,12 +11,10 @@
 <body>
   <div class = container>
     <div onclick="flipCard()" class="card" id="card">1</div>
-      <div class="card" id="back"></div>
-    <div onclick="flipCard2()" class="card2" id="card2">2
-      <div class="card2" id="back2">
-        <img src="" alt="" id="img4">
-      <div
-      </div>
+      <div class="cardB" id="back"></div>
+    <div onclick="flipCard2()" class="card2" id="card2">1</div>
+      <div class="cardB2" id="back2"></div>
+    </div>
   </div>
   <button onclick="start()" id="startGame"> Start Game </button>
 </body>
